# megs

./: Cargo.toml  README.md
assets/modules/Gates/: And.wasm  and.wasm
modules/and/: Cargo.toml
modules/and/src/: lib.rs
src/: .main.rs.swp  contract.rs  core.rs  interaction.rs  lib.rs  main.rs  misc.rs  ui.rs
src/core/: contract.rs  module.rs
src/ui/: dnd.rs
