[package]
name = "megs"
version = "0.1.0"
edition = "2021"
categories = ["simulation", "simulator", "game"]
description = "A Modular and Extensible Gate Simulator"
exclude = ["assets/**/*"]
keywords = ["logic", "gates", "gate", "circuits", "circuit"]
readme = "README.md"
repository = "https://github.com/r4gus/megs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[workspace]
members = ["modules/*"]

[dependencies]
macroquad = "0.3.15"
wasmer = "2.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
