[package]
name = "megs"
version = "0.1.0"
edition = "2021"
categories = ["simulation", "simulator", "game"]
description = "A Modular and Extensible Gate Simulator"
exclude = ["assets/**/*"]
keywords = ["logic", "gates", "gate", "circuits", "circuit"]
readme = "README.md"
repository = "https://github.com/r4gus/megs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[toolchain]
channel = "nightly"

[workspace]
members = ["modules/*"]

[dependencies]
macroquad = "0.3.25"
wasmer = "3.1"
uuid = { version = "1.2", features = ["serde", "v4"] }

# Enable optimizations for dependencies.
[profile.dev.package."*"]    
opt-level = 3    
    
[profile.dev]    
opt-level = 3
