cargo-features = ["per-package-target"]

[package]
name = "and"
version = "0.1.0"
edition = "2021"
default-target = "wasm32-unknown-unknown" # https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

